<resources>
    <string name="help_force_browser">Force API Browser</string>
    <string name="stop_all">Stop All</string>
    <string name="application_title">SL4A</string>
    <string name="application_nice_title">Scripting Layer for Android</string>
    <string name="wiki_url">http://code.google.com/p/android-scripting/wiki/TableOfContents?tm=6</string>
    <string name="youtube_url">http://www.youtube.com/view_play_list?p=07A81E6CE96F158B</string>
    <string name="text_preferences">Text</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in pixels.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">1</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="no_scripts_message">Start adding scripts and interpreters by pressing the menu
    button.</string>
    <string name="no_apis_message">No matching APIs found.</string>
    <string name="notification_action_message">Tap to open Script Monitor.</string>
    <string name="no_running_scripts_message">There are no currently running scripts.</string>
    <string name="script_number_message">Number of running scripts:\t</string>
    <string name="no_triggers_message">No triggers.</string>
    <string name="no_bluetooth_devices_message">No Bluetooth devices found.</string>
    <string name="search_description_scripts">Search scripts</string>
    <string name="search_description_apis">Search APIs</string>
    <string name="prompt_process_exited">Process has exited.\nClose terminal?</string>
    <string name="prompt_confirm_exit">Confirm exit.\nKill process?</string>
    <string name="terminal_copy_done">Copied %1$d bytes to clipboard</string>
    <string name="terminal_copy_start">Touch and drag\nor use directional pad\nto select area to copy</string>
    <string name="terminal_menu_close">Close</string>
    <string name="terminal_menu_copy">Copy</string>
    <string name="terminal_menu_copy_all">Copy All</string>
    <string name="terminal_menu_paste">Paste</string>
    <string name="terminal_menu_resize">Force Size</string>
    <string name="button_resize">Resize</string>
    <string name="pref_scrollback_title">Scrollback size</string>
    <string name="pref_scrollback_summary">Size of scrollback buffer to keep in memory for each console</string>
    <string name="pref_rotation_title">Rotation mode</string>
    <string name="pref_rotation_summary">How to change rotation when keyboard popped in/out</string>
    <string name="pref_fullscreen_title">Full screen</string>
    <string name="pref_fullscreen_summary">Hide status bar while in console</string>
    <string name="pref_keymode_title">Directory shortcuts</string>
    <string name="pref_keymode_summary">Select how to use Alt for \'/\' and Shift for Tab</string>
    <string name="pref_camera_title">Camera shortcut</string>
    <string name="pref_camera_summary">Select which shortcut to trigger when the camera button is pushed</string>
    <string name="pref_keepalive_title">Keep screen awake</string>
    <string name="pref_keepalive_summary">Prevent the screen from turning off when working in a console</string>
    <string name="pref_bumpyarrows_title">Bumpy arrows</string>
    <string name="pref_bumpyarrows_summary">Vibrate when sending arrow keys from trackball</string>
    <string name="pref_hidekeyboard_title">Hide Keyboard</string>
    <string name="pref_hidekeyboard_summary">Hide soft keyboard in terminal on startup</string>
    <string name="pref_bell_category">Terminal bell</string>
    <string name="pref_bell_title">Audible bell</string>
    <string name="pref_bell_volume_title">Bell volume</string>
    <string name="pref_bell_vibrate_title">Vibrate on bell</string>
    <string name="pref_fontsize_title">Font size (pt)</string>
    <string name="pref_delkey_title">DEL Key</string>
    <string name="pref_delkey_summary">The key code sent when DEL key is pressed</string>
    <string name="pref_encoding_title">Encoding</string>
    <string name="pref_encoding_summary">Character encoding for the host</string>
    <string name="pref_hide_notifications">Hide Notifications</string>
    <string name="list_rotation_default">Default</string>
    <string name="list_rotation_land">Force landscape</string>
    <string name="list_rotation_port">Force portrait</string>
    <string name="list_rotation_auto">Automatic</string>
    <string name="list_keymode_right">Use right-side keys</string>
    <string name="list_keymode_left">Use left-side keys</string>
    <string name="list_keymode_none">Disable</string>
    <string name="list_camera_ctrlaspace">Ctrl+A then Space</string>
    <string name="list_camera_ctrla">Ctrl+A</string>
    <string name="list_camera_esc">Esc</string>
    <string name="list_camera_esc_a">Esc+A</string>
    <string name="list_camera_none">None</string>
    <string name="list_delkey_backspace">Backspace</string>
    <string name="list_delkey_del">Delete</string>
    <string name="title_help">Help</string>
    <string name="help_acks">SL4A uses <a href="http://code.google.com/p/connectbot/">ConnectBot</a> terminal.</string>
    <string name="help_intro">Please select a topic below for more information on a particular subject.</string>
    <string name="enable_auto_close">Enable Auto Close</string>
    <string name="notice">notice</string>
    <string name="title_editor">%1$s</string>
    <string name="title_editor_dirty">%1$s *</string>
    <string name="title_editor_readonly">[%1$s]</string>
    <string name="title_settings">Settings </string>
    <string name="config_cat_display">Display</string>
    <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
    <string name="config_title_line_numbers">Show line numbers</string>
    <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
    <string name="config_title_word_wrap">Word wrap</string>
    <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
    <string name="config_title_scroll_fling">Fling to scroll faster</string>
    <string name="config_title_color_theme">Color theme</string>
    <string name="config_title_text_size">Text size</string>
    <string name="config_cat_other">Other</string>
    <string name="config_cat_save">Saving</string>
    <string name="config_cat_undo">Undo</string>
    <string name="config_cat_search">Search</string>
    <string name="config_title_end_of_lines">End of lines</string>
    <string name="config_title_encoding">Encoding</string>
    <string name="config_title_auto_save">Auto Save</string>
    <string name="config_summary_auto_save">Automatically saves the file being edited when the app goes in background</string>
    <string name="config_summary_auto_save_overwrite_on">Auto save will overwrite existing files</string>
    <string name="config_summary_auto_save_overwrite_off">Auto save will only work with new files</string>
    <string name="config_title_auto_save_overwrite">Overwrite existing files</string>
    <string name="config_title_allow_undo_stack">Allow undo</string>
    <string name="config_title_max_undo_stack">Maximum undo history</string>
    <string name="config_title_search_wrap">Search wrap</string>
    <string name="config_title_search_match_case">Search match case</string>
    <string name="ui_hint_search">Search</string>
    <string name="toast_intent_invalid_uri">Unable to open the file, URI is invalid</string>
    <string name="toast_open_home_page_error">Default file not found, try setting a new one in the settings.</string>
    <string name="toast_home_page_cant_read">"Can't open default file cause it isn't readable"</string>
    <string name="toast_warn_no_undo_will_quit">Nothing to undo anymore. Press Back one more time to quit.</string>
    <string name="menu_new">new</string>
    <string name="menu_open">open</string>
    <string name="menu_setting">setting</string>
    <string name="onTemplate">onTemplate</string>
    <string name="onright">onRight</string>
    <string name="onapi">onApi</string>
    <string name="onsave">onSave</string>
    <string name="onplay">onPlay</string>
    <string name="onback">onBack</string>
    <string name="onsearch">onSearch</string>
    <string name="onhistory">onHistory</string>
    <string name="onsetting">onSetting</string>
    <string name="ui_save">Save</string>
    <string name="ui_no_save">"Don't save"</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_save_text">"Do you want to save your document? \nAny unsaved changes will be lost. "</string>
    <string name="toast_warn_no_undo">Nothing to undo anymore.</string>
    <string name="toast_search_no_input">Type a text to search in the search bar</string>
    <string name="toast_search_not_found">No match was found in the current file</string>
    <string name="toast_search_eof">No more match found in the current file</string>
    <string name="toast_memory_open">Unable to open the file, not enough memory</string>
    <string name="toast_open_error">Unable to open the file (maybe the file is too big, or corrupted)</string>
    <string name="toast_save_null">Unable to save, path is null</string>
    <string name="script_search">search</string>
    <string name="script_add">add</string>
    <string name="script_view">view</string>
    <string name="script_interpreters">interpreters</string>
    <string name="script_triggers">triggers</string>
    <string name="script_logcat">logcat</string>
    <string name="script_setting">setting</string>
    <string name="script_preferences">preferences</string>
    <string name="script_refresh">refresh</string>
    <string name="script_help">help</string>
    <string name="script_about">script_about</string>
    <string name="script_example">install example</string>
    <string name="usagetracking1">Usage tracking</string>
    <string name="usagetracking2">Allow anonymous usage tracking.</string>
    <string name="use_service_port1">Server Port</string>
    <string name="use_service_port2">Port to use for running server. Leave at 0 for random selection.</string>
    <string name="show_all_files">Show all files</string>
    <string name="use_quick_menu">Use QuickActions Menu</string>
    <string name="helpForceBrowser">Force API Help to use default Android Browser</string>
    <string name="enableAutoClose">When enabled, quotes and brackets are automatically completed.</string>
    <string name="editor_no_wrap1">Do not wrap text in editor</string>
    <string name="editor_no_wrap2">No Wrap</string>
    <string name="editor_auto_indent1">Auto Indent</string>
    <string name="editor_auto_indent2">Auto Indent Disabled</string>
    <string name="editor_auto_indent3">Auto Indent Enabled</string>
</resources>