<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/script_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/script_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute"/>
    <item
        android:id="@+id/script_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/script_add"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute"/>
    <item
        android:id="@+id/script_view"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/script_view"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute">
        <menu>
            <item
                android:id="@+id/script_interpreters"
                android:title="@string/script_interpreters"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_triggers"
                android:title="@string/script_triggers"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_logcat"
                android:title="@string/script_logcat"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
    <item
        android:id="@+id/script_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/script_setting"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute">
        <menu>
            <item
                android:id="@+id/script_preferences"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/script_preferences"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_refresh"
                android:icon="@android:drawable/stat_notify_sync"
                android:title="@string/script_refresh"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/script_help"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_example"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/script_example"
                app:showAsAction="always|withText"/>
            <item
                android:id="@+id/script_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/script_about"
                app:showAsAction="always|withText"/>
        </menu>
    </item>

</menu>